src/objects/Assessment_Legacy__c.object
<CustomObject>
    <fields>
        <fullName>Emergency_Contact_if_other__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Emergency Contact, if other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employed_at_Intake__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Employed at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Employed P/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed F/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Information_Confirmed__c</fullName>
        <label>Employment Information Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Section_1__c</fullName>
        <label>Employment Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_history__c</fullName>
        <inlineHelpText>Check all that apply</inlineHelpText>
        <label>Employment history</label>
        <picklist>
            <picklistValues>
                <fullName>Unemployed at time of current offense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed for more than 1 year at a time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never employed more than 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequently quits jobs (3 or more times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems getting along at work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacks job search skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barriers to employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive employment record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ever_recvd_counseling_other_MH_services__c</fullName>
        <label>Ever recvd counseling other MH services?</label>
        <picklist>
            <picklistValues>
                <fullName>Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the last 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expecting_a_Child__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Expecting a Child?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Background__c</fullName>
        <inlineHelpText>Describe family background (ethnicity, place of birth, where raised and by whom, current significant familial relationships, who does participant live with now?). Note LSCMI questions re: positive family relationships.</inlineHelpText>
        <label>Family Background</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Peers_Section_1__c</fullName>
        <label>Family &amp; Peers Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feel_afraid_at_home__c</fullName>
        <inlineHelpText>Is there anything that goes on at home that makes you feel afraid?</inlineHelpText>
        <label>Feel afraid at home?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Needed__c</fullName>
        <label>Follow-up Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_PTSD_Diagnosis_Likely__c</fullName>
        <defaultValue>false</defaultValue>
        <description>populated via workflow due to compile size</description>
        <label>Full PTSD Diagnosis Likely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gang_Involvement__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Gang Involvement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>Contact__r.Gender_CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genogram__c</fullName>
        <label>Genogram</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Has_your_intimate_partner_ever_hurt_you__c</fullName>
        <inlineHelpText>Has your intimate partner ever hurt or threatened you?</inlineHelpText>
        <label>Has your intimate partner ever hurt you?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_partner_ever_pushed_hit_you__c</fullName>
        <inlineHelpText>Has your intimate partner ever pushed, slapped, hit or hurt you in some way?</inlineHelpText>
        <label>Has your partner ever pushed/hit you?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_partner_taken_hurt_your_kids__c</fullName>
        <inlineHelpText>Has your intimate partner taken the children without permission, threatened to never let them see you again, or otherwise harmed them?</inlineHelpText>
        <label>Has your partner taken/hurt your kids?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_3_of_your_friends_been_arrested__c</fullName>
        <inlineHelpText>Have 3 or more of your friends ever been arrested and/or spent time in jail?</inlineHelpText>
        <label>Have 3+ of your friends been arrested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_any_of_your_friends_been_arrested__c</fullName>
        <inlineHelpText>Have any of your friends ever been arrested and/or spent time in jail?</inlineHelpText>
        <label>Have any of your friends been arrested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_had_treatment__c</fullName>
        <label>Have had treatment?</label>
        <picklist>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient and Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Prior Treatment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Issues__c</fullName>
        <label>Health Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abortion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest Pain/Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty Hearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty Sleeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty Waking Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digestive Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dizzy Spells/Fainting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eczema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Trauma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headaches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Palpitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implants (organ, bone, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscarriage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nightmares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pregnancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prenatal Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seizures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Disorders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <label>Health</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education_Completed__c</fullName>
        <label>Highest Level of Education Completed</label>
        <picklist>
            <picklistValues>
                <fullName>No Formal Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grammar School (K - Grade 6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior High School (Grades 7 - 9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School (Grades 10 - 12 or GED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business, vocational, or technical training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some college but no degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Copied from Contact when Assessment saved until completion: Alumni Survey</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hospitalized_resd_prgm_for_MH_reasons__c</fullName>
        <label>Hospitalized/resd prgm for MH reasons?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Hourly Pay</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_many_children__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>How many children?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_credits_have_you_earned__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>How many credits have you earned?</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_client_is_in_pain_rate_intensity__c</fullName>
        <label>If client is in pain, rate intensity</label>
        <picklist>
            <picklistValues>
                <fullName>Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worst</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Special_Education__c</fullName>
        <label>In Special Education?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional/Behavioral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning and Emotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning and Speech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech and Emotional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incarcerated_Family_Members__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Incarcerated Family Members?</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Incarcerated Family Members</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indication_of_Phys_Health_Problem__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Indication of Phys Health Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Number__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Insurance Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Date__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSIRSV_Original_Assessment__c</fullName>
        <label>Original Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maximum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LSI_R_SV_Score__c</fullName>
        <label>LSI-R:SV Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Grade_Completed__c</fullName>
        <label>Last Grade Completed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_School_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from Contact until assessment complete</description>
        <label>Last School Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>LegacyAssessments12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <description>not unique, not external id (as far as SF concerned).</description>
        <label>Legacy Database Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leisure_Recreation_Notes__c</fullName>
        <label>Leisure/Recreation Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_any_prescribed_painkillers__c</fullName>
        <inlineHelpText>Please enter any pain medication the client is currently prescribed.</inlineHelpText>
        <label>List any prescribed pain medication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Living_Situation__c</fullName>
        <inlineHelpText>Include comments on current living situation, history of housing, and any major events that influenced a change in household and/or a move to a new location</inlineHelpText>
        <label>Living Situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAYSI_2__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>MAYSI - 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MH_Flag_Contact_RPT__c</fullName>
        <description>Pull MH Flag fields from contact for reporting. Used to feed MH Flag RPT</description>
        <formula>if(or( Contact__r.MAYSI_Flag__c =True,Text(Contact__r.Community_based_Care_Recommended__c) =&apos;Yes&apos;, Not(Isnull(Contact__r.Mental_Health_History__c))),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>MH Flag Contact RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Flag_RPT__c</fullName>
        <description>Flag for reporting on if any of the MH Data capture fields have a value that indicates MH issue at some point. 7/11/12: QC: Removed &quot;..@interview&quot; from logic (LG,CVV).</description>
        <formula>if(or( text(Ever_recvd_counseling_other_MH_services__c)=&apos;Currently&apos;, text(Ever_recvd_counseling_other_MH_services__c)=&apos;Used To&apos;, text( Prescribe_take_med_to_treat_MH_problem__c )=&apos;Currently&apos;, text( Prescribe_take_med_to_treat_MH_problem__c )=&apos;Used To&apos;, Text( Hospitalized_resd_prgm_for_MH_reasons__c)=&apos;Yes&apos;, MH_Flag_Contact_RPT__c=&apos;Yes&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>MH Flag RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meet_with_Counselor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Question: Would you like to meet with one of our counselors with the Nathaniel Clinic for further assessment?</inlineHelpText>
        <label>Meet with Counselor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mental_Health_History__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Mental Health History</label>
        <picklist>
            <picklistValues>
                <fullName>Suicide attempts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self harm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychotropic med–ever taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychotropic med–prescribed not taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling/mental health treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using alcohol/drugs to cope w/ emotions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Issues__c</fullName>
        <label>Mental Health Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Antisocial Personality Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiety Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bipolar Affective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borderline Personality Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impulse Control Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Depressive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paranoid Personality Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychotic Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought/personality/adjustment disorders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Issues_at_Interview__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Mental Health Issues at Interview</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Section_1__c</fullName>
        <label>Mental Health Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Miscellaneous1__c</fullName>
        <label>Miscellaneous</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Last_Attended_Other__c</fullName>
        <label>Month/Year Last Attended</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Last_Attended_School__c</fullName>
        <label>Month/Year Last Attended</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Taken_GED__c</fullName>
        <label>Month/Year Last Taken</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Taken_Regents__c</fullName>
        <description>Regents Month and Year last taken</description>
        <label>Month/Year Last Taken</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Taken_TASC__c</fullName>
        <label>Month/Year Last Taken</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Alumni_Survey__c</fullName>
        <label>Most Recent Alumni Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Last successful contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last contact attempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_for_MHS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the client present a need for mental health services?</inlineHelpText>
        <label>Need for MHS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Neighborhood</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neurodevelopmental_Disorders__c</fullName>
        <label>Neurodevelopmental Disorders</label>
        <picklist>
            <picklistValues>
                <fullName>Intellectual Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attention Deficit Hyperactivity (ADHD)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_schools_attended_in_the_last_5_yrs__c</fullName>
        <label>No. schools attended in the last 5 yrs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_LPN__c</fullName>
        <label>Notes (LPN)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Psych__c</fullName>
        <label>Notes (Psych.)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_doctor_visits_in_the_last_year__c</fullName>
        <label>Number of doctor visits in the last year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_general_health_ER_visits__c</fullName>
        <inlineHelpText>Please enter the number of times the client has visited the emergency room for general health concerns in the last 12 months.</inlineHelpText>
        <label>Number of general health ER visits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSIS_No__c</fullName>
        <label>OSIS No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obstacles_to_Progress__c</fullName>
        <inlineHelpText>Q: What are current issues, obstacles and problems that could hold you back from progressing?</inlineHelpText>
        <label>Obstacles to Progress</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Optional_Documents_Collected__c</fullName>
        <label>Optional Documents Collected</label>
        <picklist>
            <picklistValues>
                <fullName>Driver’s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Stub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Letter from last school or GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Transcripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Record Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/ Guardian Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: SA/ MH Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRT/Osborne Release Form</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>